// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: FormContainer Stories Default 1`] = `
.emotion-0 {
  box-shadow: 0 0 15px 2px rgba(0,0,0,0.1);
  border-radius: 5px;
  border: solid 1px rgba(0,0,0,0.1);
  padding: 20px;
  background: #fff;
  margin-bottom: 10px;
}

<div
  className="dimmable emotion-0"
>
  Some Content
  <div
    className="ui inverted dimmer"
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div
        className="center"
      >
        <div
          className="ui text loader"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component: FormContainer Stories Loading 1`] = `
.emotion-0 {
  box-shadow: 0 0 15px 2px rgba(0,0,0,0.1);
  border-radius: 5px;
  border: solid 1px rgba(0,0,0,0.1);
  padding: 20px;
  background: #fff;
  margin-bottom: 10px;
}

<div
  className="dimmed dimmable emotion-0"
>
  My content is dimmed
  <div
    className="ui active transition visible inverted dimmer"
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div
        className="center"
      >
        <div
          className="ui text loader"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component: FormContainer Stories Loading Message 1`] = `
.emotion-0 {
  box-shadow: 0 0 15px 2px rgba(0,0,0,0.1);
  border-radius: 5px;
  border: solid 1px rgba(0,0,0,0.1);
  padding: 20px;
  background: #fff;
  margin-bottom: 10px;
}

<div
  className="dimmed dimmable emotion-0"
>
  My content is dimmed
  <div
    className="ui active transition visible inverted dimmer"
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div
        className="center"
      >
        <div
          className="ui text loader"
        >
          Custom Loading Message
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component: FormContainer Stories Passes Extra Props 1`] = `
.emotion-0 {
  box-shadow: 0 0 15px 2px rgba(0,0,0,0.1);
  border-radius: 5px;
  border: solid 1px rgba(0,0,0,0.1);
  padding: 20px;
  background: #fff;
  margin-bottom: 10px;
}

<form
  action={undefined}
  className="ui form dimmable emotion-0"
  onSubmit={[Function]}
>
  Some Content
  <div
    className="ui inverted dimmer"
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div
        className="center"
      >
        <div
          className="ui text loader"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>
</form>
`;
